# DengoPStoSwitch

./: CMakeLists.txt  LICENSE  README.md  dengo2switch.c  ps2.c  ps2.h  setup.sh  usb_descriptors.c
